2002-04-25  Andrew Cagney  <ac131313@redhat.com>

	* README: Update to GDB 5.2.

2002-04-19  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/README: Update.

	* go32-nat.c (store_register): Cast &a_tss to `char *', to avoid
	compiler warning.

2002-04-18  GDB Administrator  <gdbadmin@sourceware.cygnus.com>

	* version.in: Bump to version 5.1.91.

2002-04-15  Andrew Cagney  <ac131313@redhat.com>

	* PROBLEMS: Mention hppa2.0-hp-hpux10.20 compile problems.

2002-04-15  Pierre Muller  <muller@ics.u-strasbg.fr>

	Merge from trunk:

	2002-04-09  Pierre Muller  <muller@ics.u-strasbg.fr>

	* p-exp.y (yylex): Handle also the fact that is_a_field_of_this
	is non zero as a found symbol.

2002-04-15  Andrew Cagney  <ac131313@redhat.com>
 
	* bcache.c: Include <stddef.h> and <stdlib.h> after "defs.h".
	Update copyright.

	* hpread.c (hpread_getlntt): Add declaration.
	Also fix PR gdb/391.

2002-04-14  Andrew Cagney  <ac131313@redhat.com>

	* acinclude.m4 (AM_PROG_CC_STDC): Import from automake 1.6.
	* aclocal.m4, configure: Re-generate.
	Fix PR gdb/391.
	
2002-04-14  Elena Zannoni  <ezannoni@redhat.com>

	* MAINTAINERS (sh-elf): Change warning flag to ,-Werror.

2002-04-14  Elena Zannoni  <ezannoni@redhat.com>

        * remote-e7000.c (write_small, e7000_read_inferior_memory,
        e7000_read_inferior_memory_large, e7000_insert_breakpoint,
        e7000_remove_breakpoint): Use paddr_nz() to print addresses.

2002-04-10  Michal Ludvig  <mludvig@suse.cz>

	* x86-64-linux-nat.c (child_resume, child_xfer_memory): Delete.
	(PTRACE_XFER_TYPE): Moved to config/i386/nm-x86-64.h.
	(kernel_u_size): Added.
	* config/i386/nm-x86-64.h (CHILD_XFER_MEMORY, CHILD_RESUME): Delete.
	(PTRACE_XFER_TYPE): Moved here from config/i386/nm-x86-64.h.

2002-04-08  Pierre Muller  <muller@ics.u-strasbg.fr>

	from 2002-03-22  Christopher Faylor  <cgf@redhat.com> patch 
	in main branch.
	* win32-nat.c (child_create_inferior): Check for proper shell to use 