@@ -1,3 +1,8 @@
+2002-04-26  Michal Ludvig  <mludvig@suse.cz>
+
+	* x86-64-tdep.c (x86_64_skip_prologue): Print note when debugging
+	code without frame pointers.
+
 2002-04-25  Andrew Cagney  <ac131313@redhat.com>
 
 	* README: Update to GDB 5.2.
